syntax = "proto3";

option csharp_namespace = "Grpc.Server.Demo";

package Teacher;

message TeacherInfo {
  int32 id = 1;
  string name=2;
}

message TeacherResponse {
  string name = 1;
}

service TeacherService {
 rpc GetTeachers(TeacherInfo) returns (TeacherResponse);
 rpc GetAllTeacher(stream TeacherInfo) returns (stream TeacherResponse);
}

